feat(): Add related posts on post page and home page

--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -6,8 +6,8 @@
       <div  [ngClass]="(isDesktop$ | async)? 'login-slogan' : 'login-slogan-mobile'">
  
         <h1>A community to share knowledge and better understand the world.</h1>
-        <p>By having an Onozor account, you can subscribe, vote, follow other users, comment, answer, favorite all
-          your favorite Onozor content. <br /></p>
+        <p>By having an Onozor account, you can subscribe to any community of your choice, <b>ASK question</b>, vote, follow other professional users, answer, comment, favorite or save all
+          your favorite  Onozor content. </p>
       </div>
       
 
