--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -85,5 +85,11 @@
     border-left: 1px solid #00000075;
   }
 
+  .disscussion {
+    font-size: 1rem;
+    font-weight: 700;
+    color: #455a64;
+    margin-bottom: 4px;
+  }
 
 }
