--- a/src/app/posts/answer-form/answer-form.component.html
+++ b/src/app/posts/answer-form/answer-form.component.html
@@ -1,10 +1,10 @@
 <div fxLayout="row" fxLayoutGap="20px" fxLayout.xs="column">
-  <div fxFlex="50" fxLayout="column" fxLayoutGap="30px">
+  <div fxFlex="100" fxLayout="column" fxLayoutGap="30px">
     <mat-card class="example-card">
       <div class="row" fxFlexAlign="start">
         <mat-card-header fxFlex="50">
           <div mat-card-avatar *ngIf="isCurrentUser" [ngStyle]="{'background-image': 'url(' + currentUser.avatar.thumb.url+ ')', 'background-size': 'cover'}"></div>
-          <div mat-card-avatar *ngIf="!isCurrentUser" style="background-size: cover; background-image: url('https://qsf.ec.quoracdn.net/-3-images.new_grid.profile_pic_default_small.png-26-902da2b339fedf49.png')"></div>
+          <div mat-card-avatar *ngIf="!isCurrentUser" style="background-size: cover; background-image: url('https://res.cloudinary.com/sportbay-co/image/upload/v1537287942/user_svhfyt.png')"></div>
           <mat-card-title *ngIf="isCurrentUser">{{currentUser?.first_name}} {{currentUser?.last_name}}</mat-card-title>
           <mat-card-subtitle *ngIf="isCurrentUser">@{{currentUser?.username}}</mat-card-subtitle>
         </mat-card-header>
