--- a/src/app/posts/comments/comments.component.html
+++ b/src/app/posts/comments/comments.component.html
@@ -36,7 +36,9 @@
   </div>
 </div>
 <small *ngIf="pageMeta?.next_page && !loadingComments">
-  <button mat-button (click)="loadMoreComments(pageMeta.next_page)" style="text-align: center" (click)="onClick">LOAD MORE COMMENTS</button>
+  <button mat-button (click)="loadMoreComments(pageMeta.next_page)" style="text-align: center" (click)="onClick">LOAD MORE COMMENTS <i class="material-icons">
+      keyboard_arrow_down
+      </i></button>
 </small>
 
 <mat-progress-bar *ngIf="pageMeta?.next_page && loadingComments" mode="indeterminate"></mat-progress-bar>
