--- a/src/app/posts/posts.component.css
+++ b/src/app/posts/posts.component.css
@@ -54,7 +54,23 @@
 
 
 .mat-card {
-  padding: 15px 16px 2px 16px;
+  padding: 15px 20px 2px 20px;
+}
+
+.disscussion {
+  font-size: 1rem;
+  font-weight: 500;
+  margin-bottom: 4px;
+  cursor: pointer;
+}
+
+.list {
+  margin-bottom: 15px;
+}
+
+.treading > h4 {
+  margin-bottom: 20px;
+  font-size: 1.2em;
 }
  
 
