--- a/src/app/posts/posts.component.scss
+++ b/src/app/posts/posts.component.scss
@@ -72,6 +72,20 @@
   margin-bottom: 20px;
   font-size: 1.2em;
 }
+
+.add_answer {
+  text-align: center;
+  img {
+    width: 150px;
+  }
+
+  p {
+    text-align: center;
+    font-size: 1rem;
+    color: #8e919d;
+  }
+  
+}
  
 
 
