--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -57,8 +57,9 @@
       <button mat-icon-button>
         <mat-icon>search</mat-icon>
       </button>
-      <button mat-icon-button *ngIf="isLoging">
-        <mat-icon matBadge="1" matBadgeColor="warn">notifications_none</mat-icon>
+      <button mat-icon-button *ngIf="isLoging" [routerLink]="['notifications/all']">
+          <mat-icon *ngIf="notification_counter === 0">notifications_none</mat-icon>
+          <mat-icon *ngIf="notification_counter > 0" [matBadge]="notification_counter" matBadgeColor="warn" class="mat-18">notifications_none</mat-icon>
       </button>
 
       <div *ngIf="isLoging">
