fix(notifcation): add notification and search

--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -11,11 +11,16 @@
   border: 1px solid #4D72D0;
   outline: none;
   width: 39%;
+  color: #fff;
 
   input {
     border: none;
     background: none;
     outline: none;
+    color: #fff;
+    :-moz-placeholder, ::-webkit-input-placeholder {
+      color: #fff;
+    }
   }
   .mat-icon {
     margin-top: 4px;
@@ -33,3 +38,17 @@
   font-weight: lighter;
 }
 
+.is-loading ::ng-deep .mat-option-text {
+  display: flex;
+  justify-content: center;
+}
+
+.example-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
+
+.example-full-width {
+  width: 100%;
+}
