fix(): header seach for mobile

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -106,11 +106,12 @@
     </div>
   </mat-toolbar-row>
   <mat-toolbar-row fxLayoutAlign="space-between center" *ngIf="showSearch">
-  <form fxLayout="row" fxFlex="100%" fxFlexFill [formGroup]='usersForm'>
+    <form fxLayout="row" fxFlex="100%" fxFlexFill [formGroup]='usersForm'>
       <mat-form-field class="example-full-width">
-          <mat-icon>search</mat-icon>
-        <input type="search" matInput placeholder="Search Onozor" id="searchForm" fxFlexFill [matAutocomplete]="auto" formControlName='userInput'>
-        <mat-icon matSuffix (click)="showSearch = !showSearch">close</mat-icon>
+        <mat-icon>search</mat-icon>
+        <input type="search" matInput placeholder="Search Onozor" id="searchForm" fxFlexFill [matAutocomplete]="auto"
+          formControlName='userInput'>
+        <mat-icon matSuffix (click)="hideSearchForm(!showSearch)">close</mat-icon>
       </mat-form-field>
       <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
         <mat-option *ngIf="isLoading" class="is-loading">
